opam-version: "2.0"
name: "CertiGraph"
version: "1.0"
maintainer: "CertiGraph team"
homepage: "https://github.com/CertiGraphCertiGraph"
dev-repo: "git+https://github.com/CertiGraphCertiGraph.git"
bug-reports: "https://github.com/CertiGraphCertiGraph/issues"
license: "https://github.com/CertiGraphCertiGraph/blob/live/LICENSE"
authors: ["Aquinas Hobor"
    "Shengyi Wang"
    "Anshuman Mohan"
]
build: [
    [make "BITSIZE=32" "depend"]
    [make "BITSIZE=32" "-j%{jobs}%"]
]
install: [
    make "BITSIZE=32" "install"
]
depends: [
    "coq" {>= "8.18.0" & < "8.19~"}
    "coq-vst-32" {= "2.13"}
]
synopsis: "A library for verifying graph-manipulating programs"
description: """
CertiGraph is a library for verifying graph-manipulating programs.
"""
