opam-version: "2.0"
maintainer: "CertiGraph team"
homepage: "https://github.com/Salamari/CertiGraph"
dev-repo: "git+https://github.com/Salamari/CertiGraph.git"
bug-reports: "https://github.com/Salamari/CertiGraph/issues"
license: "https://github.com/Salamari/CertiGraph/blob/live/LICENSE"
authors: ["Aquinas Hobor"
    "Shengyi Wang"
    "Anshuman Mohan"
]
build: [
    [make "BITSIZE=64" "clean"]
    [make "BITSIZE=64" "depend"]
    [make "BITSIZE=64" "-j%{jobs}%"]
]
install: [
    make "BITSIZE=64" "install"
]
depends: [
    "coq" {>= "8.13.2"}
    "coq-compcert" {= "3.9"}
    "coq-vst" {= "2.8"}
]
synopsis: "A library for verifying graph-manipulating programs"
description: """
CertiGraph is a library for verifying graph-manipulating programs.
"""